customer overlaping fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -686,6 +686,18 @@ a:hover {
     justify-content: center;
   }
 }
+@media screen and (max-width: 580px) {
+  .conteiner--card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .contacts__button-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
 .customer__reviews__section {
   align-items: center;
   max-width: 1200px;
@@ -852,6 +864,9 @@ a:hover {
   }
 }
 @media screen and (max-width: 480px) {
+  .customer__reviews__section {
+    margin-top: 150px;
+  }
   .customer__coments {
     font-size: 12px;
   }
@@ -875,6 +890,7 @@ a:hover {
 }
 .footer__slogan {
   text-transform: uppercase;
+  width: 650px;
 }
 .footer__slogan--small-title {
   color: rgb(255, 165, 186);
@@ -882,7 +898,6 @@ a:hover {
   font-weight: 400;
   letter-spacing: 0.04em;
   font-family: "Titan One", cursive;
-  padding-bottom: 15px;
   transition: transform 500ms ease-in-out;
 }
 .footer__slogan--small-title span {
