--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -4,6 +4,7 @@
 .footer {
   background-color: color.$pink-light;
 }
+
 .container__footer {
   min-width: 320px;
   max-width: 1170px;
@@ -13,12 +14,14 @@
 
 .footer {
   padding-top: 100px;
+
   &__slogan {
     text-transform: uppercase;
+    width: 650px;
+
     &--small-title {
       @include m.footerText(color.$pink, 1.8rem, 400, 0.04em, null);
       font-family: "Titan One", cursive;
-      padding-bottom: 15px;
 
       transition: transform 500ms ease-in-out;
 
@@ -27,6 +30,7 @@
         transition: 500ms ease-in-out;
       }
     }
+
     span {
       font-family: "Titan One", cursive;
     }
@@ -38,6 +42,7 @@
       span {
         transition: transform 500ms ease-in-out;
       }
+
       & span:hover {
         transform: scale(1.2);
         display: inline-block;
@@ -51,6 +56,7 @@
     }
   }
 }
+
 .footer__slogan {
   transition: transform 500ms ease-in-out;
 
@@ -60,7 +66,7 @@
     transition: 500ms ease-in-out;
   }
 
-  &:hover &--small-title > span {
+  &:hover &--small-title>span {
     color: color.$pink-dark;
     position: absolute;
     transform: translate(-250%, 100%);
@@ -83,6 +89,7 @@
     gap: 30px;
     padding-bottom: 40px;
   }
+
   &--icon {
     width: 34px;
     height: 34px;
@@ -96,12 +103,14 @@
       background-color: color.$pink-dark;
       transition: 500ms ease;
     }
+
     svg {
       fill: color.$white;
       width: 20px;
       height: 20px;
     }
   }
+
   &--contact {
     font-weight: 700;
     text-align: right;
@@ -126,6 +135,7 @@
   border-top: 1px solid #e1e1e1;
   text-align: center;
   padding: 25px 0;
+
   p {
     @include m.footerText(color.$gray-pink, 0.87rem, 700, 0.04em, null);
     transition: 500ms ease;
@@ -135,6 +145,7 @@
       transition: 500ms ease;
     }
   }
+
   br {
     display: none;
   }
@@ -145,21 +156,25 @@
     &__slogan {
       &--small-title {
         font-size: 1.6rem;
+
         span {
           display: block;
         }
       }
+
       &--big-title {
         padding-top: 10px;
         font-size: 3rem;
         line-height: normal;
         display: inline-block;
+
         h2 {
           line-height: 1;
         }
       }
     }
   }
+
   .footer__social {
     margin: auto;
 
@@ -167,23 +182,28 @@
       font-size: 0.87rem;
     }
   }
+
   .footer__copyright {
     margin-top: 40px;
   }
 }
+
 @media screen and (max-width: 480px) {
   .footer {
     &__social {
       padding: 40px 0 20px;
     }
+
     &__social--contact {
       justify-content: flex-start;
       text-align: end;
     }
+
     &__slogan-social {
       display: block;
     }
   }
+
   .footer__copyright {
     br {
       display: block;
